Vertically align column ordering, fixes issue #13

--- a/less/components/querybuilder.less
+++ b/less/components/querybuilder.less
@@ -476,7 +476,7 @@ div.column-container {
     display: flex;
     flex-wrap: wrap;
     padding: 10px;
-     // flex-direction: column;
+     flex-direction: column;
     transition: all 100ms ease;
 
     &.dragtest {
